--- a/miniprogram/pages/addRecord/addRecord.wxml
+++ b/miniprogram/pages/addRecord/addRecord.wxml
@@ -7,45 +7,44 @@
 </view>
 <view class="add-record-container">
   <view class="form-description">请填写您的个人健康信息，帮助我们提供更好的医疗服务</view>
-  
+
   <view class="form-section">
     <view class="section-title">
       <view class="section-line"></view>
       <text>基本信息</text>
       <text class="section-subtitle">（请填写基本个人信息）</text>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">建档日期</text>
       <picker mode="date" value="{{recordDate}}" bindchange="onDateChange">
         <view class="form-input date-input">{{recordDate || '2025-04-25'}}</view>
       </picker>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">姓名</text>
       <input class="form-input" type="text" placeholder="请输入姓名" value="{{name}}" bindinput="onNameInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">性别</text>
-      <view class="radio-group">
-        <view class="radio-item" bindtap="onGenderSelect" data-gender="男">
-          <view class="radio-circle {{gender === '男' ? 'selected' : ''}}"></view>
-          <text>男</text>
-        </view>
-        <view class="radio-item" bindtap="onGenderSelect" data-gender="女">
-          <view class="radio-circle {{gender === '女' ? 'selected' : ''}}"></view>
-          <text>女</text>
-        </view>
-      </view>
+
+      <radio-group class="radio-group" bindchange="onGenderSelect">
+        <label class="radio-item" wx:for="{{genderOptions}}" wx:key="index" value="{{item.value}}"
+          checked="{{item.checked}}">
+          <radio value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </radio-group>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">国籍/籍贯</text>
-      <input class="form-input" type="text" placeholder="请输入国籍（默认中国）" value="{{nationality}}" bindinput="onNationalityInput" />
+      <input class="form-input" type="text" placeholder="请输入国籍（默认中国）" value="{{nationality}}"
+        bindinput="onNationalityInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">出生日期</text>
       <picker mode="date" value="{{birthDate}}" bindchange="onBirthDateChange">
@@ -53,44 +52,50 @@
       </picker>
     </view>
     <view class="form-item-hint">您的出生日期将用于计算年龄和确定适合的医疗方案</view>
-    
+
     <view class="form-item">
       <text class="form-label required">职业</text>
       <picker mode="selector" range="{{occupations}}" value="{{occupationIndex}}" bindchange="onOccupationChange">
         <view class="form-input picker-input">{{occupationIndex >= 0 ? occupations[occupationIndex] : '请选择职业'}}</view>
       </picker>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">手机号码</text>
-      <input class="form-input" type="number" maxlength="11" placeholder="请输入手机号码" value="{{phone}}" bindinput="onPhoneInput" />
+      <input class="form-input" type="number" maxlength="11" placeholder="请输入手机号码" value="{{phone}}"
+        bindinput="onPhoneInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">家庭地址 (选填)</text>
       <view class="address-input-container">
-        <input class="form-input" type="text" placeholder="请输入家庭地址 (选填)" value="{{address}}" bindinput="onAddressInput" />
+        <input class="form-input" type="text" placeholder="请输入家庭地址 (选填)" value="{{address}}"
+          bindinput="onAddressInput" />
       </view>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">身份证号/护照号</text>
-      <input class="form-input" type="text" placeholder="请输入身份证号/护照号" value="{{idNumber}}" bindinput="onIdNumberInput" />
+      <input class="form-input" type="text" placeholder="请输入身份证号/护照号" value="{{idNumber}}"
+        bindinput="onIdNumberInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">紧急联系人/关系</text>
-      <input class="form-input" type="text" placeholder="请输入紧急联系人姓名及关系" value="{{emergencyContact}}" bindinput="onEmergencyContactInput" />
+      <input class="form-input" type="text" placeholder="请输入紧急联系人姓名及关系" value="{{emergencyContact}}"
+        bindinput="onEmergencyContactInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">紧急联系人电话</text>
-      <input class="form-input" type="number" maxlength="11" placeholder="请输入紧急联系人电话" value="{{emergencyPhone}}" bindinput="onEmergencyPhoneInput" />
+      <input class="form-input" type="number" maxlength="11" placeholder="请输入紧急联系人电话" value="{{emergencyPhone}}"
+        bindinput="onEmergencyPhoneInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">婚姻状况</text>
-      <view class="radio-group-vertical">
+
+      <!-- <view class="radio-group-vertical">
         <view class="radio-item" bindtap="onMaritalStatusSelect" data-status="已婚">
           <view class="radio-circle {{maritalStatus === '已婚' ? 'selected' : ''}}"></view>
           <text>已婚</text>
@@ -103,24 +108,32 @@
           <view class="radio-circle {{maritalStatus === '离异或丧偶' ? 'selected' : ''}}"></view>
           <text>离异或丧偶</text>
         </view>
-      </view>
+      </view> -->
+
+      <radio-group class="radio-group" bindchange="onMaritalStatusSelect">
+        <label class="radio-item" wx:for="{{maritalStatusOptions}}" wx:key="index" value="{{item.value}}"
+          checked="{{item.checked}}">
+          <radio value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </radio-group>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">医疗保险类型</text>
       <view class="sub-label">选择适用的医疗保险类型（可多选）</view>
-     
+
       <checkbox-group class="checkbox-grid" bindchange="onInsuranceTypeSelect">
         <label class="checkbox-item" wx:for="{{insuranceOptions}}" wx:key="index">
-          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}"/>
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
           <text>{{item.value}}</text>
         </label>
-        
-        
+
+
       </checkbox-group>
     </view>
   </view>
-  
+
   <!-- 健康信息部分 -->
   <view class="form-section margin-top">
     <view class="section-title">
@@ -128,84 +141,83 @@
       <text>健康信息</text>
       <text class="section-subtitle">（请填写健康基础数据）</text>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">身高 (厘米)</text>
       <input class="form-input" type="digit" placeholder="请输入身高 (选填)" value="{{height}}" bindinput="onHeightInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">体重 (公斤)</text>
       <input class="form-input" type="digit" placeholder="请输入体重 (选填)" value="{{weight}}" bindinput="onWeightInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">腰围 (厘米)</text>
-      <input class="form-input" type="digit" placeholder="请输入腰围 (选填)" value="{{waistline}}" bindinput="onWaistlineInput" />
+      <input class="form-input" type="digit" placeholder="请输入腰围 (选填)" value="{{waistline}}"
+        bindinput="onWaistlineInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">血型</text>
       <picker mode="selector" range="{{bloodTypes}}" value="{{bloodTypeIndex}}" bindchange="onBloodTypeChange">
         <view class="form-input picker-input">{{bloodTypeIndex >= 0 ? bloodTypes[bloodTypeIndex] : '选择血型 (选填)'}}</view>
       </picker>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">Rh血型</text>
       <picker mode="selector" range="{{rhTypes}}" value="{{rhTypeIndex}}" bindchange="onRhTypeChange">
         <view class="form-input picker-input">{{rhTypeIndex >= 0 ? rhTypes[rhTypeIndex] : '选择Rh血型 (选填)'}}</view>
       </picker>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">脉搏 (次/分钟)</text>
       <input class="form-input" type="digit" placeholder="请输入脉搏 (选填)" value="{{pulse}}" bindinput="onPulseInput" />
     </view>
-    
+
     <view class="form-item">
       <text class="form-label">用药情况</text>
       <view class="sub-label">如不填写，将默认为无用药情况</view>
-      <view class="radio-group-vertical">
-        <view class="radio-item" bindtap="onMedicationSelect" data-status="无">
-          <view class="radio-circle {{medication === '无' ? 'selected' : ''}}"></view>
-          <text>无</text>
-        </view>
-        <view class="radio-item" bindtap="onMedicationSelect" data-status="有">
-          <view class="radio-circle {{medication === '有' ? 'selected' : ''}}"></view>
-          <text>有</text>
-        </view>
-      </view>
-      
+      <radio-group class="radio-group" bindchange="onMedicationSelect">
+        <label class="radio-item" wx:for="{{medicationOptions}}" wx:key="index" value="{{item.value}}"
+          checked="{{item.checked}}">
+          <radio value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </radio-group>
+
       <view class="medication-detail" wx:if="{{medication === '有'}}">
-        <textarea class="form-textarea" placeholder="请描述您的用药情况" value="{{medicationDetail}}" bindinput="onMedicationDetailInput"></textarea>
+        <textarea class="form-textarea" placeholder="请描述您的用药情况" value="{{medicationDetail}}"
+          bindinput="onMedicationDetailInput"></textarea>
       </view>
     </view>
   </view>
-  
+
   <!-- 过敏史部分 -->
   <view class="form-section margin-top">
     <view class="section-title">
       <view class="section-line"></view>
       <text>药物或食物过敏史</text>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">过敏史</text>
       <view class="sub-label">选择您的过敏类型（可多选）</view>
-      
-  
+
+
       <checkbox-group class="checkbox-grid" bindchange="onAllergySelect">
         <label class="checkbox-item" wx:for="{{allergyOptions}}" wx:key="index">
-          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}"/>
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
           <text>{{item.value}}</text>
         </label>
-        
-        
+
+
       </checkbox-group>
     </view>
   </view>
-  
+
   <!-- 病史部分 -->
   <view class="form-section margin-top">
     <view class="section-title">
@@ -213,29 +225,26 @@
       <text>病史</text>
       <text class="section-subtitle">（请填写既往疾病情况）</text>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">既往史</text>
       <view class="sub-label">选择您目前患有的慢性疾病（可多选）</view>
-      
-      <view class="checkbox-grid">
-        <block wx:for="{{medicalHistoryOptions}}" wx:key="index">
-          <view class="checkbox-item {{medicalHistory.includes(item) ? 'checked' : ''}}" bindtap="onMedicalHistorySelect" data-type="{{item}}">
-            <view class="checkbox-box">
-              <view class="checkbox-inner" wx:if="{{medicalHistory.includes(item)}}"></view>
-            </view>
-            <text>{{item}}</text>
-          </view>
-        </block>
-      </view>
+
+      <checkbox-group class="checkbox-grid" bindchange="onMedicalHistorySelect">
+        <label class="checkbox-item" wx:for="{{medicalHistoryOptions}}" wx:key="index">
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </checkbox-group>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">住院史</text>
-      <textarea class="form-textarea" placeholder="无" value="{{hospitalizationHistory}}" bindinput="onHospitalizationHistoryInput"></textarea>
+      <textarea class="form-textarea" placeholder="无" value="{{hospitalizationHistory}}"
+        bindinput="onHospitalizationHistoryInput"></textarea>
     </view>
   </view>
-  
+
   <!-- 生活习惯部分 -->
   <view class="form-section margin-top">
     <view class="section-title">
@@ -243,85 +252,70 @@
       <text>生活习惯</text>
       <text class="section-subtitle">（请选择您的日常生活习惯）</text>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">吸烟饮酒史</text>
       <view class="sub-label">选择您的吸烟饮酒史（可多选）</view>
-      
-      <view class="checkbox-grid">
-        <block wx:for="{{smokingOptions}}" wx:key="index">
-          <view class="checkbox-item {{smokingHistory.includes(item) ? 'checked' : ''}}" bindtap="onSmokingHistorySelect" data-type="{{item}}">
-            <view class="checkbox-box">
-              <view class="checkbox-inner" wx:if="{{smokingHistory.includes(item)}}"></view>
-            </view>
-            <text>{{item}}</text>
-          </view>
-        </block>
-      </view>
+
+      <checkbox-group class="checkbox-grid" bindchange="onSmokingHistorySelect">
+        <label class="checkbox-item" wx:for="{{smokingOptions}}" wx:key="index">
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </checkbox-group>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">运动习惯</text>
       <view class="sub-label">选择您的运动习惯（可多选）</view>
-      
-      <view class="checkbox-grid">
-        <block wx:for="{{exerciseOptions}}" wx:key="index">
-          <view class="checkbox-item {{exerciseHabits.includes(item) ? 'checked' : ''}}" bindtap="onExerciseHabitSelect" data-type="{{item}}">
-            <view class="checkbox-box">
-              <view class="checkbox-inner" wx:if="{{exerciseHabits.includes(item)}}"></view>
-            </view>
-            <text>{{item}}</text>
-          </view>
-        </block>
-      </view>
+
+      <checkbox-group class="checkbox-grid" bindchange="onExerciseHabitSelect">
+        <label class="checkbox-item" wx:for="{{exerciseOptions}}" wx:key="index">
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </checkbox-group>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">饮食习惯</text>
       <view class="sub-label">选择您的饮食习惯（可多选）</view>
-      
-      <view class="checkbox-grid">
-        <block wx:for="{{dietaryOptions}}" wx:key="index">
-          <view class="checkbox-item {{dietaryHabits.includes(item) ? 'checked' : ''}}" bindtap="onDietaryHabitSelect" data-type="{{item}}">
-            <view class="checkbox-box">
-              <view class="checkbox-inner" wx:if="{{dietaryHabits.includes(item)}}"></view>
-            </view>
-            <text>{{item}}</text>
-          </view>
-        </block>
-      </view>
+
+      <checkbox-group class="checkbox-grid" bindchange="onDietaryHabitSelect">
+        <label class="checkbox-item" wx:for="{{dietaryOptions}}" wx:key="index">
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </checkbox-group>
     </view>
   </view>
-  
+
   <!-- 睡眠质量部分 -->
   <view class="form-section margin-top">
     <view class="section-title">
       <view class="section-line"></view>
       <text>睡眠质量</text>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">睡眠质量</text>
       <view class="sub-label">选择适用的睡眠质量描述（可多选）</view>
-      
-      <view class="checkbox-grid">
-        <block wx:for="{{sleepQualityOptions}}" wx:key="index">
-          <view class="checkbox-item {{sleepQuality.includes(item) ? 'checked' : ''}}" bindtap="onSleepQualitySelect" data-type="{{item}}">
-            <view class="checkbox-box">
-              <view class="checkbox-inner" wx:if="{{sleepQuality.includes(item)}}"></view>
-            </view>
-            <text>{{item}}</text>
-          </view>
-        </block>
-      </view>
+
+      <checkbox-group class="checkbox-grid" bindchange="onSleepQualitySelect">
+        <label class="checkbox-item" wx:for="{{sleepQualityOptions}}" wx:key="index">
+          <checkbox class="checkbox-box" value="{{item.value}}" checked="{{item.checked}}" />
+          <text>{{item.value}}</text>
+        </label>
+      </checkbox-group>
     </view>
-    
+
     <view class="form-item">
       <text class="form-label required">睡眠时间</text>
-      <input class="form-input" type="digit" placeholder="请输入平均每晚睡眠时间（小时）" value="{{sleepHours}}" bindinput="onSleepHoursInput" />
+      <input class="form-input" type="digit" placeholder="请输入平均每晚睡眠时间（小时）" value="{{sleepHours}}"
+        bindinput="onSleepHoursInput" />
     </view>
   </view>
-  
+
   <view class="submit-btn-area">
     <button class="submit-btn" bindtap="submitForm">提交</button>
   </view>
