--- a/miniprogram/pages/addRecord/addRecord.less
+++ b/miniprogram/pages/addRecord/addRecord.less
@@ -228,11 +228,14 @@ wx-radio .wx-radio-input.wx-radio-input-checked:before {
 }
 
 .submit-btn-area {
-  margin-top: 50rpx;
+  margin: 50rpx 0 100rpx 0;
   padding: 0 30rpx;
 }
 
 .submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 88rpx;
   line-height: 88rpx;
@@ -240,7 +243,7 @@ wx-radio .wx-radio-input.wx-radio-input-checked:before {
   background-color: #4169e1;
   color: #fff;
   font-size: 32rpx;
-  border-radius: 44rpx;
+  border-radius: 20rpx;
   border: none;
 }
 
