--- a/miniprogram/pages/addRecord/addRecord.less
+++ b/miniprogram/pages/addRecord/addRecord.less
@@ -1,9 +1,6 @@
 .header-area {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
+  position: relative;
+ 
   background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
   background-position: bottom center;
   background-size: 100%;
@@ -43,7 +40,7 @@
 }
 
 .add-record-container {
-  margin-top: 320rpx;
+  margin-top: 40rpx;
   padding: 0 30rpx 40rpx;
 }
 
