--- a/miniprogram/pages/addRecord/addRecord.wxml
+++ b/miniprogram/pages/addRecord/addRecord.wxml
@@ -52,12 +52,12 @@
         <view class="form-input picker-input">{{occupationIndex >= 0 ? occupations[occupationIndex] : '请选择职业'}}</view>
       </picker>
     </view>
-
+<!-- 
     <view class="form-item">
       <text class="form-label required">手机号码</text>
       <input class="form-input" type="number" maxlength="11" placeholder="请输入手机号码" value="{{phone}}"
         bindinput="onPhoneInput" />
-    </view>
+    </view> -->
 
     <view class="form-item">
       <text class="form-label">家庭地址 (选填)</text>
