--- a/miniprogram/pages/addRecord/addRecord.less
+++ b/miniprogram/pages/addRecord/addRecord.less
@@ -1,42 +1,24 @@
 .header-area {
-  position: relative;
- 
-  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
-  background-position: bottom center;
-  background-size: 100%;
-  bottom: 0;
-  height: 300rpx;
+  background-color: rgba(37,99,235, 0.05);
 
   .header-container {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    padding: 20rpx 60rpx;
-    color: #fff;
-    position: absolute;
-    bottom: 0rpx;
-    left: 0;
-    right: 0;
-
-    .header-left {
-      font-size: 60rpx;
-      font-weight: 400;
+    justify-content: center;
+    padding: 40rpx 30rpx;
+    .header-title {
+      font-size: 40rpx;
+      font-weight: 500;
+      color: rgba(37,99,235,1);
     }
-
-    .header-right {
-      display: flex;
-      align-items: center;
-      gap: 10rpx;
-
-      font-size: 28rpx;
-
-      image {
-        width: 31rpx;
-        height: 31rpx;
-      }
-
+    .header-subtitle {
+      font-size: 24rpx;
     }
+    
   }
+
+
 }
 
 .add-record-container {
@@ -56,6 +38,7 @@
   border-radius: 20rpx;
   padding: 30rpx;
   box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(37,99,235, 0.2);
 }
 
 .section-title {
@@ -65,6 +48,9 @@
   font-size: 32rpx;
   font-weight: 500;
   color: #333;
+  text{
+    color: rgba(37,99,235,1);
+  }
 }
 
 .section-line {
@@ -78,7 +64,7 @@
 .section-subtitle {
   font-size: 24rpx;
   font-weight: normal;
-  color: #999;
+  color: #999 !important;
   margin-left: 10rpx;
 }
 
