--- a/miniprogram/pages/productInfo/productInfo.less
+++ b/miniprogram/pages/productInfo/productInfo.less
@@ -10,73 +10,15 @@
   }
 
   .service-section {
-    .section-title {
-      font-size: 32rpx;
-      font-weight: 600;
-      margin-bottom: 13rpx;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+
+    image {
+      width: 100%;
+      height: auto;
     }
-    .container{
-      font-size: 28rpx;
-      color: #020202;
-    }
 
-    .service-item {
-      .item-title-container {
-        display: flex;
-        justify-content: flex-start;
-        gap: 30rpx;
-        align-items: center;
-        margin-bottom: 20rpx;
-      .item-title {
-        font-size: 30rpx;
-        font-weight: 600;
-      }
-        .frequency {
-          display: inline-block;
-          background: #4A3AFF;
-          color: #fff;
-          padding: 5rpx 30rpx;
-          border-radius: 20rpx;
-          font-size: 24rpx;
-        }
-      }
-
-
-      .sub-item {
-        margin-bottom: 30rpx;
-        padding: 0 40rpx;
-
-        .sub-item-title-container {
-          display: flex;
-          justify-content: flex-start;
-          gap: 30rpx;
-          align-items: center;
-        }
-
-        .sub-item-title {
-          font-size: 28rpx;
-          font-weight: 600;
-          margin-bottom: 10rpx;
-        }
-
-        .frequency {
-          display: inline-block;
-          background: #4A3AFF;
-          color: #fff;
-          padding: 5rpx 30rpx;
-          border-radius: 20rpx;
-          font-size: 24rpx;
-          margin-bottom: 10rpx;
-        }
-
-        .description {
-          font-size: 28rpx;
-          color: #020202;
-          line-height: 1.5;
-          margin-bottom: 30rpx;
-        }
-      }
-    }
   }
 
 
