--- a/miniprogram/pages/productInfo/productInfo.less
+++ b/miniprogram/pages/productInfo/productInfo.less
@@ -1,12 +1,13 @@
 .product-info {
   margin: 50rpx 0 0 0;
-  padding: 0 40rpx 200rpx 40rpx;
+  padding: 0 0 200rpx 0;
   background: #fff;
 
   .title {
     font-size: 60rpx;
     font-weight: 400;
     margin-bottom: 50rpx;
+    padding: 0 40rpx;
   }
 
   .service-section {
