--- a/miniprogram/pages/healthRecords/healthRecords.less
+++ b/miniprogram/pages/healthRecords/healthRecords.less
@@ -66,24 +66,12 @@ page {
     display: flex;
     flex-direction: column;
     gap: 12rpx;
-
-    &.medical-info {
-      margin-top: 20rpx;
-
-      .title {
-        font-size: 44rpx;
-        font-weight: 400;
-        line-height: 60rpx;
-        color: #000;
-        border-bottom: 4rpx solid #D4DCDD;
-        padding: 10rpx 0;
-      }
-    }
-
     .info-item {
-      display: flex;
+      display:grid;
+      gap: 10rpx;
+      grid-template-columns: repeat(9, 1fr);
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-center;
       padding: 20rpx 0;
       border-bottom: 2rpx solid #D4DCDD;
 
@@ -94,12 +82,14 @@ page {
       .label {
         color: #000;
         font-size: 30rpx;
+        grid-column: 1 / 4;
       }
 
       .value {
         color: #000;
         font-size: 30rpx;
         font-weight: 600;
+        grid-column: 4 / 10;
       }
     }
   }
