--- a/miniprogram/pages/connectUs/connectUs.less
+++ b/miniprogram/pages/connectUs/connectUs.less
@@ -1,5 +1,17 @@
 @import '../../styles/theme.less';
 
+.bg {
+  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/connect-bg.png?sign=467abf2052bb94bee93e71d2176e757b&t=1746354374');
+  background-position:  center center;
+  background-size: 100%;
+  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .header-area {
   background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
   background-position: bottom center;
@@ -27,11 +39,19 @@
 }
 
 .connect-us {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
   display: flex;
+  justify-content: flex-end;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 210rpx;
+
   .contact-btn {
-    margin-top: 300rpx;
     background-color: @primary-color;
     color: white;
     width: 502rpx;
@@ -48,114 +68,29 @@
   .contact-info {
     color: @text-secondary;
   }
-}
 
-.auth-container {
-  padding: 40rpx;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30rpx;
-}
 
-.auth-btn {
-  width: 80%;
-  height: 88rpx;
-  line-height: 88rpx;
-  background: #3827FF;
-  color: #fff;
-  border-radius: 44rpx;
-  font-size: 32rpx;
-}
+  .address-container {
+    margin-top: 44rpx;
+    width: 502rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20rpx;
 
-.avatar-wrapper {
-  padding: 0;
-  width: 120rpx;
-  height: 120rpx;
-  border-radius: 50%;
-  background: transparent;
-}
+    .address-title {
+      font-size: 40rpx;
+      font-weight: 300;
+      color: #fff;
+      
+    }
 
-.avatar-wrapper::after {
-  border: none;
-}
-
-.avatar {
-  width: 120rpx;
-  height: 120rpx;
-  border-radius: 50%;
-}
-
-.nickname-input {
-  width: 80%;
-  padding: 20rpx;
-  background: #fff;
-  border-radius: 8rpx;
-  font-size: 28rpx;
-}
-
-.mask {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.auth-modal {
-  width: 80%;
-  background: #fff;
-  border-radius: 20rpx;
-  padding: 40rpx;
-  box-sizing: border-box;
-}
-
-.modal-title {
-  font-size: 36rpx;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 40rpx;
-}
-
-.modal-content {
-  font-size: 28rpx;
-  color: #666;
-  margin-bottom: 40rpx;
-}
-
-.auth-item {
-  margin: 20rpx 0;
-  color: #333;
-}
-
-.auth-buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 20rpx;
-}
-
-.phone-btn {
-  width: 100%;
-  height: 88rpx;
-  line-height: 88rpx;
-  background: #3827FF;
-  color: #fff;
-  border-radius: 44rpx;
-  font-size: 32rpx;
-}
-
-.nickname-input {
-  width: 100%;
-  height: 88rpx;
-  line-height: 88rpx;
-  border: 2rpx solid #ddd;
-  border-radius: 44rpx;
-  padding: 0 30rpx;
-  box-sizing: border-box;
-  font-size: 28rpx;
+    .address-content {
+      font-size: 27rpx;
+      font-weight: 400;
+      color: #fff;
+      line-height: 1.3rem;
+      text-align: center;
+    }
+  }
 }
