--- a/miniprogram/components/healthList/index.wxml
+++ b/miniprogram/components/healthList/index.wxml
@@ -2,15 +2,14 @@
 
 
 <view class="health-list">
-    <view class="list-title">健康管理</view>
-    <block wx:if="{{data.note || data.file}}">
-
-        <block wx:if="{{data.note}}">
+    <view class="list-container">
+        <view class="list-title">健康管理</view>
+        <block wx:if="{{data.note || data.file}}">
 
             <view class="list-item" bindtap="goNotes">
                 <view class="item-left">
                     <view class="" hover-class="none" hover-stop-propagation="false">
-                        健康小结
+                        {{data.note.name || '健康小结'}}
                     </view>
                     <view class="item-time" hover-class="none" hover-stop-propagation="false">
                         {{format.formatTime(data.note.updatedAt)}}
@@ -21,13 +20,25 @@
                 </view>
             </view>
         </block>
+        <block wx:else>
 
-        <block wx:if="{{data.file}}">
+            <view class="empty-state">
+                <view class="empty-text">您还未有任何健康小结</view>
+            </view>
 
-            <view class="list-item" bindtap="goFiles">
+        </block>
+
+
+    </view>
+
+    <view class="list-container">
+        <view class="list-title">检查报告</view>
+        <block wx:if="{{data.note || data.file}}">
+
+            <view class="list-item" bindtap="goNotes">
                 <view class="item-left">
                     <view class="" hover-class="none" hover-stop-propagation="false">
-                        体检报告
+                        {{data.file.name || '检查报告'}}
                     </view>
                     <view class="item-time" hover-class="none" hover-stop-propagation="false">
                         {{format.formatTime(data.file.updatedAt)}}
@@ -37,10 +48,16 @@
                     <image src="/images/area-right-black.svg" />
                 </view>
             </view>
+        </block>
+        <block wx:else>
+
+            <view class="empty-state">
+                <view class="empty-text">您还未有任何检查报告</view>
+            </view>
 
         </block>
-    </block>
-    <view wx:if="{{!data.note && !data.file}}" class="empty-state">
-        <view class="empty-text">您还未有任何健康管理文档</view>
+
+
     </view>
+
 </view>
