--- a/miniprogram/components/productCard/productCard.less
+++ b/miniprogram/components/productCard/productCard.less
@@ -1,6 +1,8 @@
 .product-item {
   border-radius: 30rpx;
   padding: 30rpx;
+  background: #fafafa;
+  border: 1rpx solid #e4e4e7;
 }
 
 .bg1 {
@@ -28,17 +30,16 @@
   flex-direction: column;
   
   .product-title {
-    font-size: 40rpx;
-    font-weight: 400;
-    color: #fff;
+    font-size: 32rpx;
+    font-weight: 600;
+    color: #393939;
     margin-bottom: 20rpx;
   }
   
   .product-desc {
-    font-size: 26rpx;
+    font-size: 24rpx;
     font-weight: 400;
-    color: #fff;
-    margin-bottom: 40rpx;
+    color: #393939;
   }
 
   .price-row {
